--- a/project_1/Cargo.toml
+++ b/project_1/Cargo.toml
@@ -10,3 +10,4 @@ yahoo_finance_api = "2.1.0"
 time = "0.3.34"
 tokio = { version = "1.36.0", features = ["full"] }
 plotters = "0.3.5"
+chrono = "0.4.34"
