--- a/project_1/Cargo.toml
+++ b/project_1/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 yahoo_finance_api = "2.1.0"
 time = "0.3.34"
+chrono = "0.4.34"
 tokio = { version = "1.36.0", features = ["full"] }
 plotters = "0.3.5"
