--- a/project_3/frontend/Cargo.toml
+++ b/project_3/frontend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "project-3"
+name = "frontend"
 version = "0.1.0"
 authors = ["PhamNamSon <phamnamson1999@gmail.com>"]
 edition = "2018"
@@ -12,10 +12,6 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.84"
-actix-web = "4.5.1"
-mongodb = "2.8.2"
-serde = "1.0.197"
-serde_json = "1.0.115"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
