Refactor project_3: Rename frontend to project-3 and update package dependencies

--- a/project-3/Cargo.toml
+++ b/project-3/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "frontend"
+name = "project-3"
 version = "0.1.0"
 authors = ["PhamNamSon <phamnamson1999@gmail.com>"]
 edition = "2018"
