--- a/project_3/Cargo.toml
+++ b/project_3/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 yew = { version = "0.20", features = ["csr"] }
 web-sys = "0.3.69"
 serde_json = "1.0"
+getrandom = { version = "0.2.14", features = ["js"] }
